# unlost

./: README.md
unlost-app/: .gitignore
unlost-app/unlost/: AppDelegate.swift  ContentView.swift  Info.plist  unlost.entitlements  unlostApp.swift
unlost-app/unlost.xcodeproj/: project.pbxproj
unlost-app/unlost/Extension/: FloatingPanelSearchLayout.swift  NSApplication+Extensions.swift
unlost-app/unlost/Floating/: FloatingPanel.swift  FloatingPanelExpandableLayout.swift  VisualEffectView.swift
unlost-app/unlost/Onboarding/: Onboarding.swift  OnboardingActivateAccessibility.swift  OnboardingActivateScreenRecording.swift  OnboardingHowItWorks.swift  OnboardingLast.swift  OnboardingOneMoreThing.swift  OnboardingPermission.swift  OnboardingStart.swift
unlost-app/unlost/Recorders/: CaptureEngine.swift  MeetingRecorder.swift  ScreenRecorder.swift  TranscribeAudio.swift
unlost-app/unlost/State/: AppState.swift  BrowserState.swift  LayoutState.swift  LogState.swift  SearchState.swift
unlost-app/unlost/Utils/: AppleScript.swift  ApplicationSearcher.swift  CheckAudio.swift  Database.swift  DebounceObject.swift  DeleteData.swift  ExceptionCatcher.h  (+7 more)
unlost-server/: .gitignore  README.md  data_for_classify_query.txt  pyproject.toml  query_classifier.ipynb  query_classifier.pickle  requirements.txt  unlost_server.py
unlost-server/src/: logger.py  memory.py  process_screenshots.py
unlost-server/src/custom_sqlite/: __init__.py  filedb.py  sqlite.py
unlost-server/src/utils/: cluster_rectangles.py  db.py  migrate_0_6.py  pos.py  query.py  state.py  transform_memory.py
(+27 files in other folders)
